--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,12 +3,19 @@ title: Welcome to Butterfly!
 description: Get started with Butterlfy Code Optimizer
 ---
 
-Butterfly is a tool that will help you stucture your code to be more beautiful as the Butterfly.
+### What is Butterfly?
 
-Rest asure, this is not a framework, just a little bit of pakcages that been use to help you with some of 
-your boilerplate. Dont worry we design this tool to be remove from your code base easily also. most of our helper
-document give you what actually happen in the backstage, so you can alway remove Butterfly from your code base if we
-dont have might to support this project soon. But lets make this project dont meet that soon to fast.
+**Butterfly** is a tool that helps you structure your code to be as beautiful and elegant as its
+name suggests.
+It’s not a framework — just a lightweight collection of packages designed to reduce boilerplate and
+make your Flutter development smoother.
+
+Rest assured, Butterfly is completely optional and non-intrusive. We've built it with
+[removability](#removable-library) in mind from day one. Most of our helper documentation includes a
+detailed explanation of what happens behind the scenes, along with side-by-side tabs showing how to
+achieve the same result using native Flutter code — without Butterfly.
+
+So, if you ever decide to remove it from your project, you'll know exactly how to do it. But of course, we hope this project continues to grow with your support — let’s not say goodbye too soon.
 
 
 ## Walkthrough
@@ -18,57 +25,44 @@ dont have might to support this project soon. But lets make this project dont me
 For us taste a little bit of Butterfly feature, we need to initialize it in our project first. So here 
 the first backstage we talking about earlier, the command
 ```bash
-butterlfy init
+butterfly init
 ```
-litteraly just add some folder [models, screens, widgets, services] to your flutter root project.
+literally this command just add some folder [models, screens, widgets, services] to your flutter root project.
 then we also will ask if your project need to use authentication, mean like did your project need
 a user or not. then if yes we will create the model, we also ask for the model name. Then we also ask 
 this project need to use router mechanism or not. most of big project use this, for the Beautiful codebase,
 this feature is must have. It will make you easier in the feature, trust us on this. Btw, we also add a route.dart
-file if you use router feature. Then we also add some sesrvices for you to take a look and srart with.
+file if you use router feature. Then we also add some services for you to take a look and start with.
 if you chose yes for router and auth, ypu will get "AuthService" and "AuthRouteService" services. Then last but
-not lease, we have "CoreService" that normaly the core of all. it will be use to bind all services from Butterfly 
-so you just need to initiliaze one service and the core will take care for others. And Again, all of this service
+not lease, we have "CoreService" that normally the core of all. it will be use to bind all services from Butterfly
+so you just need to initialize one service and the core will take care for others. And Again, all of this service
 can be use without Butterfly at all and a little bit copy paste just all you need to option out from this tool.
 
-```
-{
-  "name": "My Docs",
-  "description": "My documentation site",
-  "sidebar": [
-  {
-    "group": "Getting Started",
-    "pages": [
-      {
-        "title": "Getting to know docs.page",
-        "href": "/",
-        "icon": "rocket"
-      },
-      {
-        "title": "Next Steps",
-        "href": "/next-steps",
-        "icon": "arrow-right"
-      }
-    ]
-  }
-]
-}
-```
 
-To learn more about the advanced configuration options, check out the [docs](https://use.docs.page/configuration).
+### Why Butterfly?
 
-### Content
+Butterfly are created to solve the problem on our internal projects. We notice that each project got some kind of
+boilerplate code that we need to write over and over again. So we create this tool to help us with that. In the first
+version of it, we just create a simple script to help with it, but we notice that having to change a code or update become
+a boilerplate action again, so using the package/library are the way to go since only update once. Then we expand our library
+to handle the authorization logic as well. In the old day, the authorization logic resist in the same library as the core logic.
+But as we grow we notice that not all flutter application need authorization logic, so we separate it out.
 
-docs.page uses the `docs` directory to store your documentation pages. Two pages have been created for you:
+So by then we create a new kinda ecosystem that will help ask start the application faster and more beautiful. But the earlier
+version of it kinda lock the developer from choosing the tech (library) that they want and forcing them to use the library
+that Butterfly do. This mean like using local database as the Butterfly are built with.
 
-- `index.mdx` - The home page of your documentation site, resolves to the root URL.
-- `next-steps.mdx` - A page to help you get started with docs.page, resolves to `/next-steps`.
+<Info>In old day, We have other name for this tool, only the cli to0l are called Butterfly CLI.
+But now we create the hold ecosystem to be named as Butterfly</Info>
 
-Documentation can be written using the standard [GitHub Flavored Markdown Spec](https://github.github.com/gfm/) and also supports the use of [MDX](https://mdxjs.com/), 
-with the ability to render custom [components](https://use.docs.page/components) for more advanced use cases.
+### Removable Library?
 
-## Preview
+Butterfly is **not** a framework — it's a lightweight tool designed with removability in mind.
+We understand that developers are often cautious about adopting new tools, especially those that
+might be discontinued in the future. That’s why we built Butterfly to be easy to remove from your
+codebase at any time, without hassle.
 
-To preview your documentation site, head over to [https://docs.page/preview](https://docs.page/preview) in your browser and open this directory.
-
-Previewing your documentation site will allow you to see the changes you make in real-time before you publish to the world.
+Our documentation clearly shows how to implement each feature using **Flutter's native approach**,
+without relying on Butterfly. Most of our helper guides come with two tabs: one showing how to do it
+with Butterfly, and the other showing how to do it manually. This ensures you're never locked in —
+you can adopt Butterfly with confidence and remove it whenever you need.
