docs: correct typo in index.mdx regarding Butterfly CLI

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -52,7 +52,7 @@ So by then we create a new kinda ecosystem that will help ask start the applicat
 version of it kinda lock the developer from choosing the tech (library) that they want and forcing them to use the library
 that Butterfly do. This mean like using local database as the Butterfly are built with.
 
-<Info>In old day, We have other name for this tool, only the cli to0l are called Butterfly CLI.
+<Info>In old day, We have other name for this tool, only the cli tool are called Butterfly CLI.
 But now we create the hold ecosystem to be named as Butterfly</Info>
 
 ### Removable Library?
