docs: update title and content for initialization instructions

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -18,9 +18,7 @@ achieve the same result using native Flutter code — without Butterfly.
 So, if you ever decide to remove it from your project, you'll know exactly how to do it. But of course, we hope this project continues to grow with your support — let’s not say goodbye too soon.
 
 
-## Walkthrough
-
-### Installation
+### Initialization
 
 For us taste a little bit of Butterfly feature, we need to initialize it in our project first. So here 
 the first backstage we talking about earlier, the command
