--- a/docs/libraries/core.mdx
+++ b/docs/libraries/core.mdx
@@ -3,11 +3,17 @@ title: Core Library
 description: Explore the core library of Butterfly
 ---
 
-The Core Library provides foundational tools and helpers designed to maintain a beautiful and well-structured Flutter codebase. It operates independently from user-specific logic, making it safe to use even without the Auth Library.
+The Core Library provides foundational tools and helpers designed to maintain a beautiful and
+well-structured Flutter codebase. It operates independently from user-specific logic, making it safe
+to use even without the Auth Library.
 
-One of the central pieces in this library is the `CoreService` class. Originally called `FrameworkService`, it was renamed to avoid naming collisions with Flutter's internal APIs.
+One of the central pieces in this library is the `CoreService` class. Originally called
+`FrameworkService`, it was renamed to avoid naming collisions with Flutter's internal APIs.
 
-In Butterfly, services that should be extended in your project are typically prefixed with `Base`. In this case, the actual base class is called `BaseCoreService`. When you run `butterfly init`, a file named `core.dart` is generated inside the `services` folder. It defines your project-specific `CoreService` class that extends `BaseCoreService`.
+In Butterfly, services that should be extended in your project are typically prefixed with `Base`.
+In this case, the actual base class is called `BaseCoreService`. When you run `butterfly init`, a
+file named `core.dart` is generated inside the `services` folder. It defines your project-specific
+`CoreService` class that extends `BaseCoreService`.
 
 This `CoreService` acts as the bridge to features provided by the Core Library, including:
 
