docs: update core library docs

--- a/docs/libraries/core.mdx
+++ b/docs/libraries/core.mdx
@@ -3,6 +3,8 @@ title: Core Library
 description: Explore the core library of Butterfly
 ---
 
+## Introduction
+
 The Core Library provides foundational tools and helpers designed to maintain a beautiful and
 well-structured Flutter codebase. It operates independently from user-specific logic, making it safe
 to use even without the Auth Library.
