doc: improve clarity and readability of initialization instructions in index.mdx

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -15,7 +15,8 @@ Rest assured, Butterfly is completely optional and non-intrusive. We've built it
 detailed explanation of what happens behind the scenes, along with side-by-side tabs showing how to
 achieve the same result using native Flutter code — without Butterfly.
 
-So, if you ever decide to remove it from your project, you'll know exactly how to do it. But of course, we hope this project continues to grow with your support — let’s not say goodbye too soon.
+So, if you ever decide to remove it from your project, you'll know exactly how to do it. But of
+course, we hope this project continues to grow with your support — let’s not say goodbye too soon.
 
 
 ### Initialization
@@ -25,16 +26,18 @@ the first backstage we talking about earlier, the command
 ```bash
 butterfly init
 ```
-literally this command just add some folder [models, screens, widgets, services] to your flutter root project.
-then we also will ask if your project need to use authentication, mean like did your project need
-a user or not. then if yes we will create the model, we also ask for the model name. Then we also ask 
-this project need to use router mechanism or not. most of big project use this, for the Beautiful codebase,
-this feature is must have. It will make you easier in the feature, trust us on this. Btw, we also add a route.dart
-file if you use router feature. Then we also add some services for you to take a look and start with.
-if you chose yes for router and auth, ypu will get "AuthService" and "AuthRouteService" services. Then last but
-not lease, we have "CoreService" that normally the core of all. it will be use to bind all services from Butterfly
-so you just need to initialize one service and the core will take care for others. And Again, all of this service
-can be use without Butterfly at all and a little bit copy paste just all you need to option out from this tool.
+literally this command just add some folder [models, screens, widgets, services] to your flutter
+root project. then we also will ask if your project need to use authentication, mean like did your
+project need a user or not. then if yes we will create the model, we also ask for the model name.
+Then we also ask this project need to use router mechanism or not. most of big project use this,
+for the Beautiful codebase, this feature is must have. It will make you easier in the feature, trust
+us on this. Btw, we also add a route.dart file if you use router feature. Then we also add some
+services for you to take a look and start with. If you chose yes for router and auth, ypu will get
+"AuthService" and "AuthRouteService" services. Then last but not lease, we have "CoreService" that
+normally the core of all. it will be use to bind all services from Butterfly so you just need to
+initialize one service and the core will take care for others. And Again, all of this service
+can be use without Butterfly at all and a little bit copy paste just all you need to option out
+from this tool.
 
 
 ### Why Butterfly?
