--- a/docs/libraries/core/index.mdx
+++ b/docs/libraries/core/index.mdx
@@ -26,147 +26,5 @@ This `CoreService` acts as the bridge to features provided by the Core Library, 
 > **Can you skip using `CoreService`?**
 > Technically yes — but you'd miss out on those features. We strongly recommend keeping it in place.
 
-## 🔁 `enqueue()` Helper
-
-The `enqueue()` function is a utility provided by the Butterfly Core library that allows you to
-safely schedule UI updates after the widget has completed its build phase. It is introduced via a
-mixin, making it usable in any `State` class without requiring inheritance or framework-specific
-widgets.
-
-Unlike `WidgetsBinding.instance.addPostFrameCallback`, `enqueue()` manages a dedicated task queue,
-allowing multiple UI update tasks to be queued and executed sequentially. This ensures clean and
-predictable behavior without risking rendering errors like `setState() called during build`.
-
-Key Features:
-- Ensures the widget is still mounted before executing your callback
-- Runs only after the current build() phase finishes
-- Manages a FIFO queue so multiple callbacks don’t interfere
-- Prevents: setState() or markNeedsBuild() called during build
-
-This is especially useful for state updates that would normally be placed in initState(), but might
-trigger UI rendering errors if run too early.
-
-**Example Usage:**
-
-Extend your `State` class with the `TaskQueueMixin` to enable the `enqueue()` functionality:
-
-```dart
-class MyWidgetState extends State<MyWidget> { // [!code --]
-class MyWidgetState extends State<MyWidget> with TaskQueueMixin { // [!code ++]
-  @override
-  void initState() {
-    super.initState();
-
-    enqueue(() {
-      // Your post-build UI update logic here
-    });
-  }
-}
-```
-
-
-<Tabs> <TabItem label="Butterfly" value="butterfly">
-```dart
-@override
-void initState() {
-  super.initState();
-
-  // Fetch user data asynchronously
-  apiService.getRandomUser().then((user) {
-    // ❗ Directly updating state here may cause errors if the widget is still building
-    // ref.read(userProvider.notifier).setUser(user);
-
-    // ✅ Safely schedule the state update after the build phase
-    enqueue(() { // [!code highlight]
-      ref.read(userProvider.notifier).setUser(user); // [!code highlight]
-    }); // [!code highlight]
-  });
-
-  // Schedule additional UI updates
-  enqueue(() { // [!code highlight]
-    ref.read(userProvider.notifier).UpdateRandomQuote(); // [!code highlight]
-  }); // [!code highlight]
-
-  enqueue(() { // [!code highlight]
-    ref.read(themeProvider.notifier).checkDarkMode(); // [!code highlight]
-  }); // [!code highlight]
-}
-```
-- The `apiService.getRandomUser()` call fetches user data asynchronously.
-- Instead of updating the state immediately upon data retrieval—which might occur during the
-widget's build phase and lead to errors—we use `enqueue()` to schedule the state update safely after
-the build completes.
-- Additional UI updates, such as fetching user data and checking the theme mode, are also scheduled
-using `enqueue()` to ensure they execute in the correct order and at the appropriate time.
-
-<Info> For simplicity, this example uses the `.then` syntax. In practice, consider extracting the
-initialization logic into a separate method and calling it from `initState()` for better readability
-and maintainability. </Info>
-
-</TabItem> <TabItem label="Native" value="native">
-```dart
-@override
-void initState() {
-  super.initState();
-
-  WidgetsBinding.instance.addPostFrameCallback((_) {
-    if (mounted) {
-      ref.read(userProvider.notifier).fetch();
-
-      // ❗ Adding another task here risks running both at the same frame
-      // or calling setState during build if nested in rebuilds.
-      // If needed, reuse the WidgetsBinding.instance.addPostFrameCallback
-      // in this callback
-    }
-  });
-}
-```
-- You’ll need to manually guard `mounted`
-- Cannot queue multiple tasks — hard to control the execution order
-- Prone to build-time errors if used incorrectly
- </TabItem> </Tabs>
-
-
-This helper simplifies complex post-frame logic and ensures UI updates are safe, sequential, and
-clean.
-
-### ⚠️ Applicability: `StatefulWidget` and Variants Only
-
-The `enqueue()` helper is designed for use within `StatefulWidget` and its variants, such as
-`ConsumerStatefulWidget` from Riverpod. This is because:
-
-- **Internal State Management**: `StatefulWidget` and its variants have mutable internal state,
-allowing them to manage lifecycle events like `initState()`, `didUpdateWidget()`, and `dispose()`.
-The `enqueue()` helper leverages these lifecycle methods to schedule tasks safely after the widget's
-build phase.
-
-- **Asynchronous Operations**: These widgets can perform asynchronous operations (e.g.,
-fetching data) and update their state accordingly. The `enqueue()` helper ensures that such updates
-occur after the widget is fully built, preventing potential errors.
-
-- **Lifecycle Awareness**: The helper checks the widget's `mounted` status before executing tasks,
-ensuring that operations are only performed when the widget is part of the widget tree.
-
----
-
-### 🧠 Why `StatelessWidget` Doesn't Require `enqueue()`
-
-`StatelessWidget` is designed for widgets that don't maintain any internal state and rely solely on
-the configuration information in the object itself and the `BuildContext` in which the widget is
-inflated. Key characteristics include:
-
-- **Immutability**: Once created, a `StatelessWidget` cannot change its properties. It is rebuilt
-only when its parent widget changes its configuration or when an `InheritedWidget` it depends on
-changes.
-
-- **No Internal State**: Since `StatelessWidget` doesn't manage any mutable state, there's no need
-to schedule tasks after the build phase. Any necessary updates are typically handled by the parent
-widget or through external state management solutions.
-
-- **Simplified Lifecycle**: Without the need for lifecycle methods like `initState()` or `dispose()`
-, `StatelessWidget` simplifies the widget tree and reduces complexity.
-
-In summary, `StatelessWidget` doesn't require the `enqueue()` helper because it doesn't manage
-internal state or perform asynchronous operations that need to be scheduled after the build phase.
-
-
+## 🔁 `enqueue` Helper
+## hex color Extention
