--- a/docs/libraries/core/index.mdx
+++ b/docs/libraries/core/index.mdx
@@ -26,5 +26,6 @@ This `CoreService` acts as the bridge to features provided by the Core Library, 
 > **Can you skip using `CoreService`?**
 > Technically yes — but you'd miss out on those features. We strongly recommend keeping it in place.
 
-## [🔁 `enqueue` Helper](libraries/core/features/enqueue.mdx)
-## hex color Extention
+## Features
+- [🔁 `enqueue` Helper](features/enqueue)
+- [Hex color Extension](features/enqueue)
