docs: update links in index.mdx to reflect new directory structure

--- a/docs/libraries/core/index.mdx
+++ b/docs/libraries/core/index.mdx
@@ -27,5 +27,5 @@ This `CoreService` acts as the bridge to features provided by the Core Library, 
 > Technically yes — but you'd miss out on those features. We strongly recommend keeping it in place.
 
 ## Features
-- [🔁 `enqueue` Helper](features/enqueue)
-- [Hex color Extension](features/enqueue)
+- [🔁 `enqueue` Helper](libraries/core/features/enqueue)
+- [Hex color Extension](libraries/core/features/enqueue)
