--- a/docs/libraries/core/index.mdx
+++ b/docs/libraries/core/index.mdx
@@ -29,3 +29,4 @@ This `CoreService` acts as the bridge to features provided by the Core Library, 
 ## Features
 - [🔁 `enqueue` Helper](libraries/core/features/enqueue)
 - [Hex color Extension](libraries/core/features/hex_color)
+- [Screen Layout Extension](libraries/core/features/screen_layout)
