docs: add documentation for RouteService mixin and update existing docs
This commit adds new documentation for the `RouteServiceMixin`, providing an overview of its features, usage, API reference, and best practices.

It also updates the following existing documentation files:
- `screen_layout.mdx`: Updated structure, added more examples and best practices.
- `enqueue.mdx`: Minor formatting update.
- `hex_color.mdx`: Minor formatting update.
- `index.mdx`: Added a link to the new `RouteServiceMixin` documentation.

Additionally, the `RouteServiceMixin` itself has been updated with more comprehensive documentation comments.

--- a/docs/libraries/core/features/enqueue.mdx
+++ b/docs/libraries/core/features/enqueue.mdx
@@ -3,7 +3,7 @@ title: Enqueue Utility
 description: Safely schedule UI updates after widget build phase
 ---
 
-# Enqueue Utility
+## Enqueue Utility
 
 The `enqueue()` function is a powerful utility in the Butterfly Core library that ensures safe and predictable UI updates by scheduling them to run after the current build phase completes. This helps prevent common Flutter errors like `setState() called during build`.
 
