--- a/docs/libraries/core/features/hex_color.mdx
+++ b/docs/libraries/core/features/hex_color.mdx
@@ -3,7 +3,7 @@ title: HexColor Extension
 description: Convert between Color objects and hex string representations
 ---
 
-# HexColor Extension
+## HexColor Extension
 
 The `HexColor` extension provides convenient methods for working with colors in hex format in Flutter. It extends the `Color` class with static methods for creating colors from hex strings and instance methods for converting colors to hex strings.
 
