--- a/docs/libraries/core/index.mdx
+++ b/docs/libraries/core/index.mdx
@@ -30,3 +30,4 @@ This `CoreService` acts as the bridge to features provided by the Core Library, 
 - [🔁 `enqueue` Helper](libraries/core/features/enqueue)
 - [Hex color Extension](libraries/core/features/hex_color)
 - [Screen Layout Extension](libraries/core/features/screen_layout)
+- [RouteService Mixin](libraries/core/features/route_service)
